# Agentic-appointment-booking

./: .env.example  README.md  docker-compose.yml  notes.md  pyproject.toml
backend/: agent.py  client.py  nodes.py  prototype.ipynb  test.ipynb
backend/app/: agent.py  app.py  app0.py  chat.py  client.py  mail.py  main.py  mcp_client.py  prototype.ipynb  run_cli.py  utils.py
backend/app/db/: database.py  schemas.py
backend/dump/: database.py  initial_agent.py  mail_test.py  old_agent.py  old_app.py
frontend/: package-lock.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: ChatInterface.tsx  FeatureCard.tsx  Header.tsx
frontend/src/pages/: Index.tsx
tests/: agent_test.py  db_test.py
